--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "lint": "eslint .",
+    "lint": "eslint --quiet .",
+    "prepush": "npm run lint && npm run test",
     "start": "node start",
     "test": "echo \"Error: no test specified\" && exit 0"
   },
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "eslint": "^3.1.1",
-    "eslint-config-airbnb-base": "^5.0.0"
+    "eslint-config-airbnb-base": "^5.0.0",
+    "husky": "^0.11.6"
   }
 }
