--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "4.14.0",
     "joi": "9.0.4",
     "localenv": "0.2.2",
+    "lodash": "4.14.2",
     "mongodb": "2.2.5"
   },
   "devDependencies": {
