--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test": "mocha"
   },
   "dependencies": {
+    "babel-plugin-transform-es2015-destructuring": "^6.9.0",
     "babel-plugin-transform-es2015-modules-commonjs": "6.11.5",
+    "babel-plugin-transform-object-rest-spread": "6.8.0",
     "babel-register": "6.11.6",
     "bcrypt": "0.8.7",
     "body-parser": "1.15.2",
