--- a/package.json
+++ b/package.json
@@ -11,14 +11,13 @@
     "test": "mocha"
   },
   "dependencies": {
-    "babel-plugin-transform-es2015-destructuring": "^6.9.0",
+    "babel-plugin-transform-es2015-destructuring": "6.9.0",
     "babel-plugin-transform-es2015-modules-commonjs": "6.11.5",
     "babel-plugin-transform-object-rest-spread": "6.8.0",
     "babel-register": "6.11.6",
     "bcrypt": "0.8.7",
     "body-parser": "1.15.2",
     "debug": "2.2.0",
-    "eslint-plugin-import": "1.12.0",
     "express": "4.14.0",
     "joi": "9.0.4",
     "localenv": "0.2.2",
@@ -27,8 +26,9 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "eslint": "^3.1.1",
-    "eslint-config-airbnb-base": "^5.0.0",
+    "eslint": "^3.2.2",
+    "eslint-config-airbnb-base": "^5.0.1",
+    "eslint-plugin-import": "^1.12.0",
     "husky": "^0.11.6",
     "mocha": "^3.0.2",
     "random-string": "^0.1.2",
