--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "localenv": "0.2.2",
     "lodash": "4.14.2",
     "mongodb": "2.2.5",
-    "nodemailer": "^2.5.0",
-    "ua-parser-js": "^0.7.10"
+    "nodemailer": "2.5.0",
+    "ua-parser-js": "0.7.10"
   },
   "devDependencies": {
     "chai": "^3.5.0",
