--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ PORT=3000
 BL_DATABASE_URL=mongodb://localhost:27017/backbone
 BL_DOMAIN_URL=http://localhost:3000
 BL_ACCESS_TOKEN_SECRET=REPLACE ME
-BL_EMAIL_PASSWORD=temp123$
+BL_EMAIL_PASSWORD=REPLACE ME
 
