--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "joi": "9.0.4",
     "localenv": "0.2.2",
     "lodash": "4.14.2",
+    "mailgun-js": "^0.7.12",
     "mongodb": "2.2.5",
-    "nodemailer": "2.5.0",
     "ua-parser-js": "0.7.10"
   },
   "devDependencies": {
