Clean up envs, add env for Mailgun sandbox domain
`BL_EMAIL_PASSWORD` is no longer used

--- a/.env
+++ b/.env
@@ -5,5 +5,6 @@ PORT=3000
 BL_DATABASE_URL=mongodb://localhost:27017/backbone
 BL_DOMAIN_URL=http://localhost:3000
 BL_ACCESS_TOKEN_SECRET=REPLACE ME
-BL_EMAIL_PASSWORD=REPLACE ME
 
+BL_MAILGUN_API=REPLACE ME
+BL_MAILGUN_DOMAIN=sandboxd8aee2614bc54373b96e1a88a728d512.mailgun.org
