Add ability to use test configs for emailUtility
This allows use of test configurations when sending emails in non-production
environments. In the development environment, the Mailgun sandbox domain
would be used. When running the automated test suite, emails would be sent
to a test email address that is authorized for the sandbox domain.

--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ BL_ACCESS_TOKEN_SECRET=REPLACE ME
 
 BL_MAILGUN_API=REPLACE ME
 BL_MAILGUN_DOMAIN=sandboxd8aee2614bc54373b96e1a88a728d512.mailgun.org
+BL_USE_TEST_EMAIL=false
+BL_TEST_EMAIL=test@gobackbone.com
