Use Backbone email domain by default
The Mailgun sandbox domain is limited to 5 authorized email addresses, so it
may make development more difficult when we have more devs.

--- a/.env
+++ b/.env
@@ -6,7 +6,8 @@ BL_DATABASE_URL=mongodb://localhost:27017/backbone
 BL_DOMAIN_URL=http://localhost:3000
 BL_ACCESS_TOKEN_SECRET=REPLACE ME
 
+# Email
 BL_MAILGUN_API=REPLACE ME
-BL_MAILGUN_DOMAIN=sandboxd8aee2614bc54373b96e1a88a728d512.mailgun.org
+BL_MAILGUN_DOMAIN=mail.gobackbone.com
 BL_USE_TEST_EMAIL=false
 BL_TEST_EMAIL=test@gobackbone.com
