Add bit for silencing emails, use test email by default

--- a/.env
+++ b/.env
@@ -9,5 +9,6 @@ BL_ACCESS_TOKEN_SECRET=REPLACE ME
 # Email
 BL_MAILGUN_API=REPLACE ME
 BL_MAILGUN_DOMAIN=mail.gobackbone.com
-BL_USE_TEST_EMAIL=false
+BL_SILENT_EMAIL=true
+BL_USE_TEST_EMAIL=true
 BL_TEST_EMAIL=test@gobackbone.com
