--- a/.env
+++ b/.env
@@ -3,7 +3,8 @@ DEBUG=*,-babel
 PORT=9999
 
 BL_DATABASE_URL=mongodb://localhost:27017/backbone
-BL_DOMAIN_URL=http://localhost:3000
+BL_DOMAIN_URL=http://localhost:9999
+BL_WEB_URL=http://localhost:3000
 BL_ACCESS_TOKEN_SECRET=REPLACE ME
 
 # Email
