--- a/package.json
+++ b/package.json
@@ -22,18 +22,18 @@
     "joi": "9.0.4",
     "localenv": "0.2.2",
     "lodash": "4.14.2",
-    "mailgun-js": "^0.7.12",
+    "mailgun-js": "0.7.12",
     "mongodb": "2.2.5",
     "ua-parser-js": "0.7.10"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "eslint": "^3.2.2",
-    "eslint-config-airbnb-base": "^5.0.1",
-    "eslint-plugin-import": "^1.12.0",
-    "husky": "^0.11.6",
-    "mocha": "^3.0.2",
-    "random-string": "^0.1.2",
-    "supertest": "^2.0.0"
+    "chai": "3.5.0",
+    "eslint": "3.7.1",
+    "eslint-config-airbnb-base": "5.0.3",
+    "eslint-plugin-import": "1.16.0",
+    "husky": "0.11.9",
+    "mocha": "3.1.2",
+    "random-string": "0.1.2",
+    "supertest": "2.0.1"
   }
 }
