--- a/circle.yml
+++ b/circle.yml
@@ -2,7 +2,7 @@ machine:
   timezone:
     America/Los_Angeles
   node:
-    version: 6.3.1
+    version: 6.2.2
 database:
   pre:
     - sudo service mongodb stop
@@ -11,6 +11,17 @@ database:
     - sudo apt-get update
     - sudo apt-get install -y mongodb-org=3.2.8 mongodb-org-server=3.2.8 mongodb-org-shell=3.2.8 mongodb-org-mongos=3.2.8 mongodb-org-tools=3.2.8
     - sudo service mongodb start
+dependencies:
+  pre:
+    # Install Yarn
+    - sudo apt-key adv --keyserver pgp.mit.edu --recv D101F7899D41F3C3
+    - echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+    - sudo apt-get update -qq
+    - sudo apt-get install -y -qq yarn
+  cache_directories:
+    - "~/.yarn-cache"
+  override:
+    - yarn install
 test:
   override:
     - npm run lint
