--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "husky": "0.11.9",
     "mocha": "3.1.2",
     "random-string": "0.1.2",
+    "sinon": "1.17.6",
     "supertest": "2.0.1"
   }
 }
