Add /firmware route

--- a/.env
+++ b/.env
@@ -13,3 +13,7 @@ BL_MAILGUN_DOMAIN=mail.gobackbone.com
 BL_SILENT_EMAIL=true
 BL_USE_TEST_EMAIL=true
 BL_TEST_EMAIL=test@gobackbone.com
+
+# Firmware
+BL_LATEST_FIRMWARE_VERSION=1.0.1.8
+BL_LATEST_FIRMWARE_URL=https://s3-us-west-1.amazonaws.com/gobackbone.com/firmware/Backbone_1.0.1.8.cyacd
