Pin Yarn version in AWS

--- a/.ebextensions/01_config.config
+++ b/.ebextensions/01_config.config
@@ -23,7 +23,7 @@ files:
         exit $2
       }
 
-      # install yarn
+      # install yarn@0.18.0
       npm install -g yarn
 
       # install not-installed yet app node_modules
