Use testing branch

--- a/circle.yml
+++ b/circle.yml
@@ -35,7 +35,7 @@ test:
     - npm test
 deployment:
   staging:
-    branch: master
+    branch: circleci-codedeploy
     codedeploy:
       backbone-api:
         application_root: /
