--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "lodash": "4.14.2",
     "mailgun-js": "0.7.12",
     "mongodb": "2.2.5",
+    "request": "2.79.0",
+    "request-promise": "4.1.1",
     "ua-parser-js": "0.7.10"
   },
   "devDependencies": {
