add mixpanel secret

--- a/.env
+++ b/.env
@@ -17,3 +17,7 @@ BL_TEST_EMAIL=test@gobackbone.com
 # Firmware
 BL_LATEST_FIRMWARE_VERSION=1.0.1.8
 BL_LATEST_FIRMWARE_URL=https://s3-us-west-1.amazonaws.com/gobackbone.com/firmware/Backbone_1.0.1.8.cyacd
+
+
+# Mixpanel
+BL_MIXPANEL_API_SECRET = replace me
