--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "localenv": "0.2.2",
     "lodash": "4.14.2",
     "mailgun-js": "0.7.12",
+    "moment-timezone": "0.5.11",
     "mongodb": "2.2.5",
     "request": "2.79.0",
     "request-promise": "4.1.1",
