--- a/.env
+++ b/.env
@@ -24,3 +24,6 @@ BL_FIRMWARE_URL=https://s3-us-west-1.amazonaws.com/gobackbone.com/firmware/
 
 # Mixpanel
 BL_MIXPANEL_API_SECRET = replace me
+
+# Bugsnag
+BL_BUGSNAG_API_KEY = replace me
