--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-register": "6.11.6",
     "bcrypt": "0.8.7",
     "body-parser": "1.15.2",
+    "bugsnag": "1.9.1",
     "debug": "2.2.0",
     "express": "4.14.0",
     "joi": "9.0.4",
