--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bugsnag": "1.9.1",
     "debug": "2.2.0",
     "express": "4.14.0",
+    "google-auth-library": "^0.10.0",
     "joi": "9.0.4",
     "localenv": "0.2.2",
     "lodash": "4.14.2",
