--- a/.env
+++ b/.env
@@ -27,3 +27,6 @@ BL_MIXPANEL_API_SECRET = replace me
 
 # Bugsnag
 BL_BUGSNAG_API_KEY = replace me
+
+# Google
+GOOGLE_CLIENT_ID=1082547349998-4qkn3m3u9c463nqu44r929cdsbqhi2is.apps.googleusercontent.com
