added fb access token check

--- a/.env
+++ b/.env
@@ -27,3 +27,7 @@ BL_MIXPANEL_API_SECRET = replace me
 
 # Bugsnag
 BL_BUGSNAG_API_KEY = replace me
+
+# Facebook
+APP_ID = replace me
+APP_SECRET = replace me
