updated after PR review #2

--- a/.env
+++ b/.env
@@ -29,8 +29,7 @@ BL_MIXPANEL_API_SECRET = replace me
 BL_BUGSNAG_API_KEY = replace me
 
 # Facebook
-FB_APP_ID = replace me
-FB_APP_SECRET = replace me
+FB_APP_ID=1822622864665663
 
 # Google
 GOOGLE_CLIENT_ID=1082547349998-4qkn3m3u9c463nqu44r929cdsbqhi2is.apps.googleusercontent.com
