--- a/.env
+++ b/.env
@@ -30,6 +30,7 @@ BL_BUGSNAG_API_KEY = replace me
 
 # Facebook
 FB_APP_ID=1822622864665663
+FB_APP_SECRET= replace me
 
 # Google
 GOOGLE_CLIENT_ID=1082547349998-4qkn3m3u9c463nqu44r929cdsbqhi2is.apps.googleusercontent.com
