--- a/.ebextensions/01_config.config
+++ b/.ebextensions/01_config.config
@@ -5,7 +5,7 @@ files:
     group: users
     content: |
       export HOME=/root
-      export NODE_VER=6.2.2
+      export NODE_VER=6.9.1
       export ARCH=x64
       export PATH="$PATH:/opt/elasticbeanstalk/node-install/node-v$NODE_VER-linux-$ARCH/bin/:/root/.npm"
   "/opt/elasticbeanstalk/hooks/appdeploy/pre/50npm.sh" :
@@ -23,7 +23,7 @@ files:
         exit $2
       }
 
-      # install yarn@0.18.0
+      # install yarn
       npm install -g yarn
 
       # install not-installed yet app node_modules
