--- a/.env
+++ b/.env
@@ -34,3 +34,6 @@ FB_APP_SECRET= replace me
 
 # Google
 GOOGLE_CLIENT_ID=1082547349998-4qkn3m3u9c463nqu44r929cdsbqhi2is.apps.googleusercontent.com
+
+# Comma-separated list of training plan name(s) to assign to new users
+BL_DEFAULT_TRAINING_PLAN_NAMES=Starter
