Define cache duration in environment

--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ BL_DATABASE_URL=mongodb://localhost:27017/backbone
 BL_DOMAIN_URL=http://localhost:3000
 BL_WEB_URL=http://localhost:9999
 BL_ACCESS_TOKEN_SECRET=REPLACE ME
+BL_WORKOUT_CACHE_DURATION=300
 
 # Email
 BL_MAILGUN_API=REPLACE ME
